# scientific_hackathon_backend

./: .dockerignore  .env_example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: constants.py  database.py  exceptions.py  main.py  openapi.py  pagination.py  permissions.py  schemas.py  settings.py  utils.py
src/auth/: config.py  dependencies.py  models.py  openapi.py  repositories.py  routers.py  schemas.py  services.py
src/migrations/: env.py
src/migrations/versions/: 13272bcd3daa_08_teams.py  1c38659fd1e5_05_projects.py  1c89782d1f16_11_reset_codes.py  4755a7a3bcfc_09_steps.py  569aa758d839_10_mentor_fields.py  63db22ab021b_04_projects.py  67e13a90405d_08_steps.py  842d08ab2184_merge_heads.py  9cd336b6f493_01_users.py  a8c4380c72d4_06_teams.py  afb83c4969aa_03_projects.py  ba0aaad72ceb_07_teams.py  c581afaacb15_12_teams.py  dba930bdd1ce_02_users.py
src/projects/: constants.py  dependencies.py  models.py  openapi.py  repositories.py  routers.py  schemas.py  services.py
src/teams/: dependencies.py  models.py  openapi.py  repositories.py  routers.py  schemas.py  services.py
src/users/: constants.py  dependencies.py  models.py  openapi.py  permissions.py  repositories.py  routers.py  schemas.py  services.py
