[tool.poetry]
name = "haсkathon"
version = "0.1.0"
description = ""
authors = ["David Saidov, Alexander Chistyakov"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
pydantic = {extras = ["email"], version = "^2.10.6"}
sqlalchemy = "^2.0.38"
asyncpg = "^0.30.0"
pydantic-settings = "^2.8.0"
sqlalchemy-utils = "^0.41.2"
alembic = "^1.14.1"
orjson = "^3.10.15"
python-dotenv = "^1.0.1"
pyjwt = "^2.10.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
aiofiles = "^24.1.0"
python-multipart = "^0.0.20"
aiosmtplib = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
